--- a/src/i18n/locales/vi.json
+++ b/src/i18n/locales/vi.json
@@ -1,5 +1,6 @@
 {
   "login": "Đăng Nhập",
   "username": "Tài khoản",
-  "password": "Mật khẩu"
+  "password": "Mật khẩu",
+  "errorLogin": "Bạn chưa nhập {{name}}"
 }
